
[package]
name = "MeetMon-BackEnd"
version = "0.1.0"
authors = ["Dynisious <daniel.bechaz@gmail.com>"]

[dependencies]

[dependencies.rocket]
version = "0.4.0-dev"
git = "https://github.com/SergioBenitez/Rocket/"

[dependencies.rocket_codegen]
version = "0.4.0-dev"
git = "https://github.com/SergioBenitez/Rocket/"

[dependencies.rocket_contrib]
version = "0.4.0-dev"
default-features = false
features = ["json"]
git = "https://github.com/SergioBenitez/Rocket/"
